--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,6 @@
 /* Empty. Add your own CSS if you like */
-.ng-dirty.ng-invalid-required {
-	background-color: red;
+input.ng-invalid { 
+    background:red;
+    border: 2px red solid;
 }
+
