--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,13 +3,13 @@
 		<h4>Hello from unsecured landing page</h4>
 		<div class="card">
 			<div class="item item-divider">
-				<button class="button button-block button-assertive" ng-click="getUnsecuredData">Get unsecured data</button>
+				<button class="button button-block button-assertive" ng-click="getUnsecuredData('Hello Mr. MFP')">Get unsecured data</button>
 			</div>
 			<div class="item item-text-wrap">
-				This the result from MFP invocations: 
+				This the result from MFP invocations: {{hello}}
 			</div>
 			<div class="item item-divider">
-				<button class="button button-block button-assertive" ng-click="getSecuredData">Get secured data</button>
+				<button class="button button-block button-assertive" ng-click="getSecuredData()">Get secured data</button>
 			</div>
 		</div>
 	</ion-content>
