--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,9 +1,9 @@
 <ion-modal-view>
 	<ion-pane>
-		<ion-header-bar>
+		<ion-header-bar class="bar-assertive">
 			<h1 class="title">Login</h1>
 			<div class="buttons">
-				<button class="button button-assertive" ng-click="closeLoginForm()">Close</button>
+				<button class="button button-clear" ng-click="closeLogin()">Close</button>
 			</div>
 		</ion-header-bar>
 		<ion-content>
@@ -11,9 +11,9 @@
 				<div class="list">
 					<label class="item item-input">
 						<span class="input-label">Username</span>
-						<input name="username" type="input" ng-model="loginUser.username" ng-minlength="5" required>
+						<input name="username" type="text" ng-model="loginUser.username" ng-minlength="5" required>
 					</label>
-					<div class="padding" ng-show="loginForm.$submitted || loginForm.$touched">  
+					<div class="padding" ng-show="loginForm.$submitted || loginForm.username.$touched || loginForm.username.$invalid">  
 						<p ng-show="loginForm.username.$error.required">* Username is required</p>
 						<p ng-show="loginForm.username.$error.minlength">* Username must be longer than 5 characters</p>
 					</div>
@@ -21,7 +21,7 @@
 						<span class="input-label">Password</span>
 						<input name="password" type="password" ng-model="loginUser.password" ng-minlength="8" ng-required="!loginUser.useOldPassword">
 					</label>
-					<div class="padding" ng-show="!loginUser.useOldPassword && (loginForm.$submitted || loginForm.$touched)">  	
+					<div class="padding" ng-show="!loginUser.useOldPassword && (loginForm.$submitted || loginForm.password.$touched || loginForm.password.$invalid)">  	
 						<p ng-show="loginForm.password.$error.required">* Password is required</p>
 						<p ng-show="loginForm.password.$error.minlength">* Password must be longer than 8 characters</p>
 					</div>
@@ -29,12 +29,12 @@
 						<span class="input-label">Old Password</span>
 						<input name="oldPassword" type="password" ng-model="loginUser.oldPassword" ng-minlength="8" ng-required="loginUser.useOldPassword">
 					</label>
-					<div class="padding" ng-show="loginUser.useOldPassword && (loginForm.$submitted || loginForm.$touched)">  	
-						<p ng-show="loginUser.useOldPassword && loginForm.oldPassword.$error.required">* Password is required</p>
-						<p ng-show="loginUser.useOldPassword && loginForm.oldPassword.$error.minlength">* Password must be longer than 8 characters</p>
+					<div class="padding" ng-show="loginUser.useOldPassword && (loginForm.$submitted || loginForm.useOldPassword.$touched || loginForm.useOldPassword.$invalid)">  	
+						<p ng-show="loginForm.oldPassword.$error.required">* Password is required</p>
+						<p ng-show="loginForm.oldPassword.$error.minlength">* Password must be longer than 8 characters</p>
 					</div>
 					<label class="item">
-						<button class="button button-block button-assertive" ng-click="login(loginForm, gotoSecuredArea)" ng-disabled="loginForm.$invalid" type="submit">Log in</button>
+						<button class="button button-block button-assertive" ng-click="doLogin(loginForm, gotoSecuredArea)" ng-disabled="loginForm.$invalid" type="submit">Log in</button>
 					</label>
 				</div>
 			</form>
