--- a/www/templates/secured.html
+++ b/www/templates/secured.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Unsecured landing page" hide-back-button="true">
 	<ion-content>
-		<h4>Hello from secured landing page</h4>
+		<h4>{{hello}}</h4>
 	</ion-content>
 </ion-view>
