Add online login

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -36,6 +36,9 @@
 					<label class="item">
 						<button class="button button-block button-assertive" ng-click="doLogin(loginForm, gotoSecuredArea)" ng-disabled="loginForm.$invalid" type="submit">Log in</button>
 					</label>
+					<div class="padding" ng-show="loginUser.loginMessage">  	
+						<p class='isa_error'>{{loginUser.loginMessage}}</p>
+					</div>
 				</div>
 			</form>
 		</ion-content>
