--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -37,7 +37,7 @@
 						<button class="button button-block button-assertive" ng-click="doLogin(loginForm, gotoSecuredArea)" ng-disabled="loginForm.$invalid" type="submit">Log in</button>
 					</label>
 					<div class="padding" ng-show="loginUser.loginMessage">  	
-						<p class='isa_error'>{{loginUser.loginMessage}}</p>
+						<p class="msg-error">{{loginUser.loginMessage}}</p>
 					</div>
 				</div>
 			</form>
