--- a/www/templates/secured.html
+++ b/www/templates/secured.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Unsecured landing page" hide-back-button="true">
+<ion-view view-title="Secured landing page" hide-back-button="true">
 	<ion-content>
 		<h4>{{hello}}</h4>
 	</ion-content>
