WIP - Offline logon

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,7 +26,7 @@
         <ion-item menu-close href="#/app/secured">
           Secured area
         </ion-item>
-        <ion-item menu-close ng-show="isAuthenticated()" ng-click="logout()">
+        <ion-item menu-close ng-show="isAuthenticated()" ng-click="logout(gotoHomedArea)">
           Logout
         </ion-item>
       </ion-list>
