--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -11,7 +11,7 @@
 				<div class="list">
 					<label class="item item-input">
 						<span class="input-label">Username</span>
-						<input name="username" type="text" ng-model="loginUser.username" ng-minlength="5" required>
+						<input name="username" type="text" ng-model="loginUser.username" ng-minlength="5" ng-disabled="loginUser.useOldPassword" required>
 					</label>
 					<div class="padding" ng-show="loginForm.$submitted || loginForm.username.$touched || loginForm.username.$invalid">  
 						<p ng-show="loginForm.username.$error.required">* Username is required</p>
@@ -26,7 +26,7 @@
 						<p ng-show="loginForm.password.$error.minlength">* Password must be longer than 8 characters</p>
 					</div>
 					<label class="item item-input" ng-show="loginUser.useOldPassword">
-						<span class="input-label">Old Password</span>
+						<span class="input-label">(Old) Password</span>
 						<input name="oldPassword" type="password" ng-model="loginUser.oldPassword" ng-minlength="8" ng-required="loginUser.useOldPassword">
 					</label>
 					<div class="padding" ng-show="loginUser.useOldPassword && (loginForm.$submitted || loginForm.useOldPassword.$touched || loginForm.useOldPassword.$invalid)">  	
