--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,7 +5,7 @@ input.ng-invalid {
 }
 
 .msg-info, .msg-success, .msg-warning, .msg-error {
-    margin: 10px 0px;
+    margin: 10px 0;
     padding:12px;
 }
 .msg-info {
